<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WowYi</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   	<string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">松开可以刷新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
	<string name="tab_search">搜索</string>
	<string name="tab_home">首页</string>
	<string name="tab_recommend_app">应用推荐</string>
	
	<string name="music">音乐</string>
	<string name="movie">视频</string>
	<string name="images">相册</string>
	<string name="article">文章</string>
	<string name="note">小说</string>
	<string name="set">设置</string>
</resources>